chiore: created script to chec and clear localStorage as needed, additionally fixed issue with delete all to dos button text not being visible

--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,8 @@ h1 {
     border: 0px solid;
     padding: 17px;
     border-radius: 25px;
-    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3)
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
+   
 }
 
 #deleteAllToDosButton:hover {
